# fastapi-book-sample

./: README.md  pyproject.toml
src/: database.py  main.py  routers.py  schemas.py
src/fastapi_book_sample/: database.py  functions.py  main.py  routers.py  schemas.py
src/tests/: conftest.py
tests/: conftest.py
