[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "FastAPI Sample"
name = "src"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
aiosqlite = "^0"
fastapi = {extras = ["all"], version = "^0"}
greenlet = "^3.0"
python = "^3.12"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0"
pytest-randomly = "^3.15"
ruff = "^0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
ignore_missing_imports = true
